@@ -1,5 +1,5 @@
-DIST maven-settings-2.0.tar.bz2 16847 RMD160 74f85841adf34892b813ee082650907d06a5cd2d SHA1 4c9fb944070b94804d1dcb15b28842a473c594a0 SHA256 824762992157b154d72632f4961640d2ffb3b1facb0048398433db1f6464a98c
-DIST maven-settings-gen-src-2.0.tar.bz2 13002 RMD160 f9f9e0457547addc9529217da3773e86b5b41c8b SHA1 10381a74824118bd35edfa01cc175b33c782c21e SHA256 f8d700075d1ee18b3be04d0e803504e2393480b812999dde174c268b22834206
-EBUILD maven-settings-2.0.ebuild 707 RMD160 10b8e959877abf614165c0b30c06463d29bd88c8 SHA1 0d249147776c2ff58dc383e7d77614f627f64bf2 SHA256 a2ce3056e624afb0311e51d35559a9567b07333ec5a9a3c2819d29a507b5caea
-MISC ChangeLog 591 RMD160 5b476bf832e680fa86541d8007d9c917565b22f3 SHA1 1820d9139eccec4a405acdf38c7e575567bbcdef SHA256 9ede288e12286ac8a0991b24cc991696332f4b3ffbf7ee8c5fd0a18b5e3e686d
+DIST maven-settings-2.1_pre20070611-gen-src.tar.bz2 16589 RMD160 91c4fecb5241a2506acacd1484af185fb4c9d927 SHA1 8128ec26e7619011c8cf0e4007a34a4efec0aafb SHA256 df7e306cfedee5b71d31c7211c4cef61f7c8f6cd6cde4028ebc1aab63e50c3c9
+DIST maven-settings-2.1_pre20070611.tar.bz2 19556 RMD160 6eeace962754c2de26ff2e464cf69ce1ed12c042 SHA1 0489d42c8b800decc9b07f162501839b032fcb42 SHA256 ce0282adc534b2209fa6a49df114c509ac41de741ea2ac23932d0bb249d2721a
+EBUILD maven-settings-2.1_pre20070611.ebuild 858 RMD160 45064be99c263c85fa905286d170b60af87cd7a2 SHA1 5a8b0a65534dbbe913e50595a860342a63f93287 SHA256 3f44790026d065893b785eb57de23439fa3835ab1a1ac0acdd0776241db2a72d
+MISC ChangeLog 725 RMD160 8c67b279b07d45945e90552cd8aafe6a90cd7fd9 SHA1 9e488e30d515fdd32daf6f1b3fb2e38d4c756792 SHA256 3f7defb24ad098b5b7f36b0b9284e751dfd862e29b2e806b52c7f2aa4419954e
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
